--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins&display=swap');
 
-
+html {
+  scroll-behavior: smooth;
+}
 
 * {
   margin: 0;
